ajout de reamde et equipe